Fix a bug where a header was broken into two lines

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,7 +28,7 @@ header {
 
 .hero-text-box {
     position: absolute;
-    width: 900px;
+    width: 1140px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
